--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,22 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        our_db_provider:
+            entity:
+                class: App\Entity\Participant
+                property: pseudo
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: users_in_memory
+            pattern: ^/
+            anonymous: ~
+            provider: our_db_provider
+            form_login:
+                login_path: login
+                check_path: login
+            logout_on_user_change: true
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
@@ -20,6 +28,10 @@ security:
                 secret: '%kernel.secret%'
                 lifetime: 604800
                 path : /
+
+    encoders:
+        App\Entity\Participant:
+            algorithm: bcrypt
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
