--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "fzaninotto/faker": "^1.9"
     },
     "config": {
         "preferred-install": {
