--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
         "symfony/var-dumper": "4.4.*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.4.*",
         "twig/intl-extra": "^3.0"
     },
