--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     photo_profil_directory: '%kernel.project_dir%/public/uploads/photo_profil'
+    import_csv_directory: '%kernel.project_dir%/public/uploads/imports'
 services:
     # default configuration for services in *this* file
     _defaults:
