--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
-        "symfony/mailer": "4.4.*",
         "symfony/maker-bundle": "^1.18",
         "symfony/orm-pack": "^1.0",
         "symfony/requirements-checker": "^1.1",
         "symfony/security-bundle": "4.4.*",
         "symfony/security-csrf": "4.4.*",
+        "symfony/swiftmailer-bundle": "^3.4",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
         "symfony/var-dumper": "4.4.*",
