--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/var-dumper": "4.4.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.4.*",
-        "twig/intl-extra": "^3.0"
+        "twig/intl-extra": "^3.0",
+        "ext-intl": "*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
