--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,15 +43,18 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-          - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/oubli-pass, roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/reset_pass, roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/admin, roles: ROLE_ADMIN }
-          - { path: ^/, roles: ROLE_ADMIN }
           - { path: ^/, roles: ROLE_USER }
+
 
 
